--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,25 @@ dist.dir=dist
 dist.jar=${dist.dir}/Neutron_Capture_Service.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-codec-1.9.jar=/home/max/Documentos/Java/commons-codec-1.9/commons-codec-1.9.jar
+file.reference.commons-io-2.4.jar=/home/max/Documentos/Java/commons-io-2.4/commons-io-2.4.jar
+file.reference.gson-2.2.4.jar=/home/max/Documentos/Java/google-gson-2.2.4/gson-2.2.4.jar
+file.reference.javax.ws.rs.jar=/home/max/Documentos/Java/javax.ws.rs.jar
+file.reference.jersey-client-1.13.jar=/home/max/Documentos/Java/rest/jersey-client-1.13.jar
+file.reference.jersey-core-1.13.jar=/home/max/Documentos/Java/rest/jersey-core-1.13.jar
+file.reference.jersey-json-1.13.jar=/home/max/Documentos/Java/rest/jersey-json-1.13.jar
+file.reference.jettison-1.3.3.jar=/home/max/Documentos/Java/jettison-1.3.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.2.4.jar}:\
+    ${file.reference.javax.ws.rs.jar}:\
+    ${file.reference.jersey-client-1.13.jar}:\
+    ${file.reference.jersey-core-1.13.jar}:\
+    ${file.reference.jersey-json-1.13.jar}:\
+    ${file.reference.jettison-1.3.3.jar}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
