--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,14 +38,14 @@ file.reference.jettison-1.3.3.jar=/home/max/Documentos/Java/jettison-1.3.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.gson-2.2.4.jar}:\
     ${file.reference.javax.ws.rs.jar}:\
     ${file.reference.jersey-client-1.13.jar}:\
     ${file.reference.jersey-core-1.13.jar}:\
     ${file.reference.jersey-json-1.13.jar}:\
-    ${file.reference.jettison-1.3.3.jar}:\
-    ${file.reference.commons-codec-1.9.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.jettison-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
